# web-search

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  mcp-search-repo-plan.md  pyproject.toml  web-search-repo-plan.md
docs/: 00-project-purpose.md  01-public-api.md  02-capability-model.md  03-error-model.md  04-operations.md  05-roadmap.md  06-development-workflow.md  99-readme-structure-proposal.md
scripts/: local_service.sh  promote_live.sh  smoke_client.py
src/mcp_search/: app.py  config.py  server.py
src/mcp_search/models/: requests.py
src/mcp_search/providers/: __init__.py  base.py  tavily.py
src/mcp_search/services/: extract_service.py  search_service.py
src/mcp_search/tools/: __init__.py  web_extract.py  web_search.py
src/mcp_search/utils/: errors.py
src/web_search/: app.py  config.py  logging.py  server.py
src/web_search/models/: requests.py  responses.py  routing.py
src/web_search/providers/: __init__.py  base.py  brave.py  exa.py  firecrawl.py  newsapi.py  tavily.py
src/web_search/services/: extract_router.py  extract_service.py  partial_results.py  planner.py  provider_health.py  router.py  search_service.py  verifier.py
src/web_search/tools/: __init__.py  web_extract.py  web_search.py
src/web_search/utils/: cache.py  content_cache.py  errors.py
tests/: test_brave_adapter.py  test_content_cache.py  test_exa_adapter.py  test_firecrawl_adapter.py  test_http_api.py  test_newsapi_adapter.py  test_partial_results.py  test_provider_health.py  test_provider_registry.py  test_request_models.py  test_routing.py  test_tavily_adapter.py  test_verifier.py  test_web_search_tool.py
